Assignment-1/error.txt
test.c: In function ‘main’:
test.c:4:28: error: expected ‘;’ before ‘return’
    4 |     printf("Hello World\n") //syntax error
      |                            ^
      |                            ;
    5 |     return 0;
      |     ~~~~~~                  
